--- a/daily challenge/style.css
+++ b/daily challenge/style.css
@@ -17,7 +17,46 @@ body {
   padding: 0;
 }
 
-/* Main */
+.container {
+  display: flex;
+  flex-direction: row;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 50px 20px;
+  align-items: center;
+}
+
+.content {
+  flex: 1;
+  order: 1;
+}
+
+.image {
+  flex: 1;
+  order: 2; 
+  padding-left: 20px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column; 
+  }
+
+  .content {
+    order: 1;
+  }
+
+  .image {
+    order: 2;
+    padding: 50px 0;
+}
+}
+
 
 .main-container {
   max-width: 1070px;
@@ -39,21 +78,33 @@ body {
   flex: 1 0 auto;
   flex-direction: column;
 }
-
+@media (min-width: 769px) {
 h1 {
-  color: #000;
+  color: #fff;
   font-size: 5rem;
   line-height: 33px;
   font-weight: normal;
   padding-top: 10px;
   margin-bottom: 1rem;
   font-weight: bold;
+  z-index: 1;
+  padding-left: 2rem;
+  padding-bottom: 2rem;
+}
 }
 
+@media (max-width: 768px) {
+  h1 {
+    font-size: 3rem;
+    z-index: 1;
+  }
+  }
 
-@media (max-width: 1440px) {
+
+@media (max-width: 991px) {
   .flex-between {
-    margin: 0 1rem;
+    margin: 0 auto;
+    text-align: center;
   }
 }
 
@@ -62,10 +113,12 @@ h1 {
   height: auto;
 }
 
+@media (min-width: 991px) {
 .flex-between {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 }
 
 /* .pr-25 {
@@ -128,10 +181,10 @@ span.sub-title:hover {
 }
 
 
-@media (max-width: 768px) {
-  /* .main-container {
-    padding: 0 30px;
-  } */
+@media (max-width: 575px) {
+  .main-container {
+    padding: 0;
+  }
 
 
   .main-container-banner {
@@ -176,6 +229,18 @@ a {
   flex-direction: column;
   justify-content: center;
   color: #fff;
+  align-items: center;
+  position: relative;
+}
+.back-black:before {
+  background-color: rgb(0 0 0 / 51%);
+  content: "";
+  /* height: 40rem; */
+  width: 100%;
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
 }
 .input-container {
   width: 30%;
@@ -187,17 +252,6 @@ a {
   font-weight: 500;
 }
 
-.back-black h1 {
-  padding-left: 2rem;
-  padding-bottom: 2rem;
-}
-
-input[type="email"] {
-  padding: 10px;
-  border: none;
-  border-radius: 3px;
-  margin-top: 10px;
-}
 
 
 .pt-5 {
@@ -236,4 +290,11 @@ nav {
   font-weight: 600;
   padding-left: 35px;
   text-transform: uppercase;
+}
+
+footer {
+  text-align: center;
+  border-top: 1px solid;
+  /* border-bottom: 1px solid; */
+  padding: 20px 0;
 }
