--- a/week 1/day4/create my cv in html/style.css
+++ b/week 1/day4/create my cv in html/style.css
@@ -1,8 +1,7 @@
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
@@ -18,11 +17,11 @@ body {
 }
 .left-column {
   float: left;
-  width: 30%;
-  padding: 200px 20px 0px;
+  width: 33%;
+  padding: 200px 20px 14px;
   background: #000;
   color: #fff;
-  min-height: 73vw;
+  min-height: 86vw;
   text-align: center;
 }
 .right-column {
@@ -32,6 +31,7 @@ body {
 h1 {
   color: #fff;
   font-size: 28px;
+  padding: 2rem 0;
 }
 section {
   margin-top: 20px;
